fix win probability bar spacing issue

--- a/static/css/prediction_detail.css
+++ b/static/css/prediction_detail.css
@@ -90,7 +90,8 @@ h3>.text--green {
 }
 
 .bar__segment--draw {
-    background-color: var(--bg)
+    background-color: var(--bg);
+    flex-grow: 1;
 }
 
 .bar__segment--away {
